--- a/_config.yml
+++ b/_config.yml
@@ -12,11 +12,11 @@ site-twitter: #if your site has a twitter account, enter it here
 author: jackzc # add your name
 author-img: jackzc.jpg # add your photo
 about-author: 路漫漫其修远兮,我是hello world中的一只鱼. # add description
-social-twitter: # add your Twitter handle
-social-facebook: # add your Facebook handle
-social-github: artemsheludko # add your Github handle
-social-linkedin: # add your Linkedin handle
-social-email: # add your Email address
+social-twitter: jackzc # add your Twitter handle
+social-facebook: jackzc # add your Facebook handle
+social-github: jackzc # add your Github handle
+social-linkedin: jackzc # add your Linkedin handle
+social-email: chaozou1989@163.com # add your Email address
 
 # Disqus
 discus-identifier: mr-brown # add your discus identifier
