--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ social-twitter: jackzc # add your Twitter handle
 social-facebook: jackzc # add your Facebook handle
 social-github: jackzc # add your Github handle
 social-linkedin: jackzc # add your Linkedin handle
-social-email: chaozou1989@163.com # add your Email address
+social-email: 920271619@qq.com #chaozou1989@163.com # add your Email address
 
 # Disqus
 discus-identifier: mr-brown # add your discus identifier
